# learning-email

./: README.md  pyproject.toml
src/email/: client.py  client2.py  client3.py  server.py  server2.py  server3.py
